# htn-2025-techtalk

./: README.md  pyproject.toml  real_world_problem.ipynb  requirements.txt  toy_problem.ipynb  toy_problem_1.ipynb
data/real_word_problem/: emails.jsonl
data/toy_problem_1/: job_application_questions.jsonl  job_resume.txt
utils/: model_utils.py  tool_utils.py
