[project]
name = "htn-2025-techtalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cohere>=5.17.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "rank-bm25>=0.2.2",
]

[[tool.uv.index]]
url = "https://us-central1-python.pkg.dev/cohere-artifacts/cohere-py/simple"
